[3, 4 단계 - 체스] 라온(문채원) 미션 제출합니다. (#598)
* docs: 3단계 기능 구현 목록 업데이트

* refactor: getBoard로 메서드명 변경

* test: 테스트 displayName 수정

* refactor: 폰 공격 로직 수정 및 메서드 분리

* docs: 구현한 기능 목록 업데이트

* refactor: PieceType enum에서 view 분리 및 BoardView 구현

* test: pawn 이동 로직 테스트 수정

* feat: 팀 점수 계산 로직 구현

* feat: lambda, stream 미션 구현

* feat: King이 죽었는지 판단하는 메서드 구현

* feat: 같은 세로줄에 있는 같은 팀의 pawn 계산 로직 구현

* feat: 이긴 팀 구하는 로직 구현

* refactor: Controller 로직 수정

* fix: ChessGame 생성자 파라미터 수정

* feat: DB 연결 로직 구현

* feat: DB 적용

* refactor: 축약된 변수명 수정

* docs: 3단계 기능 구현 목록 업데이트

* refactor: db 연결 테스트 수정

* refactor: 사용하지 않는 변수 삭제

* refactor: 디버깅 출력 삭제

* style: test 클래스 스타일 수정

* refactor: TurnDao 추가 및 Piece 통합

* refactor: 매직넘버 상수화